--- a/aplicacion/templates/aplicacion/Inicio.html
+++ b/aplicacion/templates/aplicacion/Inicio.html
@@ -16,6 +16,7 @@
         <p>Por favor, inicia sesión o regístrate para acceder a nuestros servicios.</p>
         <a href="{% url "login" %}" class="btn">Iniciar Sesión</a>
         <a href="{% url "crearcuenta" %}" class="btn">Registrarse</a>
+        <a href="{% url "admin_login" %}" class="btn">Iniciar Sesión como administrados</a>
     </div>
 
 </body>
