--- a/aplicacion/templates/aplicacion/TiendaOnline.html
+++ b/aplicacion/templates/aplicacion/TiendaOnline.html
@@ -28,9 +28,6 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="{% url 'admin' %}">Admin</a>
-                    </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item dropdown">
@@ -46,6 +43,11 @@
                                 <hr class="dropdown-divider">
                             </li>
                             <li><a class="dropdown-item" href="{% url 'inicio' %}">Cerrar Sesión</a></li>
+                        </ul>
+                        <ul class="navbar-nav">
+                            <a href="{% url 'detalleCompra' %}">
+                                <img src="{% static 'aplicacion/img/carrito2.png' %}" alt="Carrito" style="width: 30px; height: 30px;" id="carrito-icon">
+                            </a>
                         </ul>
                     </li>
                 </ul>
