--- a/aplicacion/templates/aplicacion/adTienda.html
+++ b/aplicacion/templates/aplicacion/adTienda.html
@@ -19,7 +19,7 @@
         <div class="container-fluid">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" href="{% url 'admin' %}">Admin</a>
+                    <a class="nav-link active" href="{% url 'admin1' %}">Admin</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'agregarcamiseta' %}">Agregar Camiseta</a>
