--- a/aplicacion/templates/aplicacion/mispedidos.html
+++ b/aplicacion/templates/aplicacion/mispedidos.html
@@ -1,7 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,14 +8,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'aplicacion/css/misPedidos.css' %}"> 
 </head>
-
 <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
         <div class="container-fluid">
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" href="{% url "TiendaOnline" %}">Tienda Online</a>
+                        <a class="nav-link active" href="{% url 'TiendaOnline' %}">Tienda Online</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
@@ -25,8 +23,8 @@
                             <img src='{% static "aplicacion/img/usu.png" %}' alt="Perfil" style="width: 30px; height: 30px;">
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="{% url "perfilusuario" %}">Mi Perfil</a></li>
-                            <li><a class="dropdown-item" href="{% url "inicio" %}">Cerrar Sesión</a></li>
+                            <li><a class="dropdown-item" href="{% url 'perfilusuario' %}">Mi Perfil</a></li>
+                            <li><a class="dropdown-item" href="{% url 'inicio' %}">Cerrar Sesión</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -44,19 +42,23 @@
                         <th scope="col">Nombre</th>
                         <th scope="col">Producto</th>
                         <th scope="col">Dirección</th>
-                        <th scope="col">Fecha de Entrega</th>
                         <th scope="col">Factura</th>
                     </tr>
                 </thead>
                 <tbody>
+                    {% for pedido in pedidos %}
                     <tr>
-                        <th scope="row">1</th>
-                        <td>Usuario 1</td>
-                        <td>Camiseta Colo Colo 2024, Camiseta Argentina Messi</td>
-                        <td>Concepcion, Paicavi 3280</td>
-                        <td>2024-04-15</td>
-                        <td><a href="{% static 'aplicacion/js/perfil.js' %}""img/factura1.png">Ver Factura</a></td>
+                        <th scope="row">{{ pedido.id }}</th>
+                        <td>{{ pedido.usuario.username }}</td>
+                        <td>
+                            {% for detalle in pedido.detalles.all %}
+                                {{ detalle.producto.nombre }}{% if not forloop.last %}, {% endif %}
+                            {% endfor %}
+                        </td>
+                        <td>{{ pedido.direccion }}</td>
+                        <td><a href="{% static 'aplicacion/js/perfil.js' %}""img/factura{{ pedido.id }}.png">Ver Factura</a></td>
                     </tr>
+                    {% endfor %}
                 </tbody>
             </table>
         </div>
@@ -64,6 +66,4 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
-    
