--- a/aplicacion/templates/aplicacion/mispedidos.html
+++ b/aplicacion/templates/aplicacion/mispedidos.html
@@ -56,7 +56,7 @@
                             {% endfor %}
                         </td>
                         <td>{{ pedido.direccion }}</td>
-                        <td><a href="{% static 'aplicacion/js/perfil.js' %}""img/factura{{ pedido.id }}.png">Ver Factura</a></td>
+                        <td><a href="{% url 'ver_factura' pedido.id %}">Ver Factura</a></td>
                     </tr>
                     {% endfor %}
                 </tbody>
