--- a/aplicacion/templates/aplicacion/detalleCompra.html
+++ b/aplicacion/templates/aplicacion/detalleCompra.html
@@ -2,7 +2,6 @@
 {% load custom_filters %}
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +10,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'aplicacion/css/detalleCompra.css' %}">
 </head>
-
 <body>
     <div class="container mt-5">
         <h1>Detalle de Compra</h1>
@@ -43,6 +41,10 @@
                     <td class="precio-total">${{ item.cantidad|multiply:item.producto.precio }}</td>
                     <td><button class="btn btn-danger btn-eliminar" data-id="{{ item.id }}">Eliminar</button></td>
                 </tr>
+                {% empty %}
+                <tr>
+                    <td colspan="6" class="text-center">El carrito está vacío.</td>
+                </tr>
                 {% endfor %}
             </tbody>
             <tfoot>
@@ -55,7 +57,7 @@
         </table>
         <div class="d-flex justify-content-between">
             <a href="{% url 'TiendaOnline' %}" class="btn btn-primary">Volver a la Tienda</a>
-            <a href="{% url 'Envio' %}" class="btn btn-success">Comprobar Envío</a>
+            <a href="{% url 'Envio' %}" class="btn btn-success btn-envio {% if not carrito_items %}disabled{% endif %}">Comprobar Envío</a>
         </div>
     </div>
 
@@ -63,5 +65,4 @@
     <script src="{% static 'aplicacion/js/jquery-3.7.1.min.js' %}"></script>
     <script src="{% static 'aplicacion/js/detalleCompra.js' %}"></script>
 </body>
-
 </html>
