--- a/aplicacion/templates/aplicacion/agregarcamiseta.html
+++ b/aplicacion/templates/aplicacion/agregarcamiseta.html
@@ -28,7 +28,7 @@
                         {{ form.as_p }}
                         <div class="mt-4 d-flex justify-content-center">
                             <button type="submit" class="btn btn-success me-3">Agregar Camiseta</button>
-                            <a href="{% url 'inicio' %}" class="btn btn-danger">Cancelar</a>
+                            <a href="{% url 'adTienda' %}" class="btn btn-danger">Cancelar</a>
                         </div>
                     </form>
                 </div>
