--- a/aplicacion/templates/aplicacion/eliminarcamiseta.html
+++ b/aplicacion/templates/aplicacion/eliminarcamiseta.html
@@ -28,7 +28,7 @@
                         {% csrf_token %}
                         <div class="mt-4 d-flex justify-content-center">
                             <button type="submit" name="action" value="delete" class="btn btn-danger me-3">Eliminar Camiseta</button>
-                            <a href="{% url 'admin1' %}" class="btn btn-secondary">Cancelar</a>
+                            <a href="{% url 'adTienda' %}" class="btn btn-secondary">Cancelar</a>
                         </div>
                     </form>
                 </div>
