--- a/aplicacion/templates/aplicacion/Inicio.html
+++ b/aplicacion/templates/aplicacion/Inicio.html
@@ -5,19 +5,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Camiseta de Fútbol</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'aplicacion/css/inicio.css' %}"> 
 </head>
 <body>
-    <header>
+    {% csrf_token %}
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto">
+                    {% if perms.aplicacion.add_permission %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'admin1' %}" style="color: white;">Administrador</a>
+                    </li>
+                    {% endif %}
+                </ul>
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'mispedidos' %}">Mis Pedidos</a>
+                    </li>
+                    {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'salir' %}">Cerrar Sesión</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link text-bg-primary" href="{% url 'login' %}">Iniciar Sesión</a>
+                    </li>
+                    {% endif %}
+                </ul>
+                <a class="nav-link" href="{% url 'detalleCompra' %}">
+                    <img src="{% static 'aplicacion/img/carritoo.png' %}" alt="Carrito" style="width: 30px; height: 30px;">
+                </a>
+                <a class="nav-link" href="{% url 'perfilusuario' %}">
+                    <img src="{% static 'aplicacion/img/usu.png' %}" alt="Perfil" style="width: 30px; height: 30px;">
+                </a>
+            </div>
+        </div>
+    </nav>
+    <header class="bg-dark text-white text-center py-3">
         <h1>TheKeyFutbol</h1>
     </header>
-    <div class="container">
+    <div class="container mt-4">
         <h2>Bienvenido a nuestra página de camisetas de fútbol</h2>
         <p>Por favor, inicia sesión o regístrate para acceder a nuestros servicios.</p>
-        <a href="{% url "login" %}" class="btn">Iniciar Sesión</a>
-        <a href="{% url "crearcuenta" %}" class="btn">Registrarse</a>
-        <a href="{% url "admin_login" %}" class="btn">Iniciar Sesión como administrados</a>
+        <a href="{% url 'login' %}" class="btn btn-primary">Iniciar Sesión</a>
+        <a href="{% url 'crearcuenta' %}" class="btn btn-secondary">Registrarse</a>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
