--- a/aplicacion/templates/aplicacion/TiendaOnline.html
+++ b/aplicacion/templates/aplicacion/TiendaOnline.html
@@ -27,41 +27,36 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <ul class="navbar-nav">
-                        {% if perms.aplicacion.add_permission %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'adPedidos' %}" style="color: white;">Administrador</a>
-                        </li>
-                        {% endif %}
-                    </ul>
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src='{% static "aplicacion/img/usu.png" %}' alt="Perfil"
-                                style="width: 30px; height: 30px;">
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-end dropdown-menu-sm" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="{% url 'perfilusuario' %}">Mi Perfil</a></li>
-                            <li><a class="dropdown-item" href="{% url 'mispedidos' %}">Mis Pedidos</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="{% url 'inicio' %}">Cerrar Sesión</a></li>
-                        </ul>
+                <ul class="navbar-nav me-auto">
+                    {% if perms.aplicacion.add_permission %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'admin1' %}" style="color: white;">Administrador</a>
                     </li>
+                    {% endif %}
                 </ul>
-                <ul class="navbar-nav">
-                    <a href="{% url 'detalleCompra' %}">
-                        <img src="{% static 'aplicacion/img/carrito2.png' %}" alt="Carrito" style="width: 30px; height: 30px;" id="carrito-icon">
-                    </a>
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'mispedidos' %}">Mis Pedidos</a>
+                    </li>
+                    {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'salir' %}">Cerrar Sesión</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link text-bg-primary" href="{% url 'login' %}">Iniciar Sesión</a>
+                    </li>
+                    {% endif %}
                 </ul>
-                
+                <a class="nav-link" href="{% url 'detalleCompra' %}">
+                    <img src="{% static 'aplicacion/img/carritoo.png' %}" alt="Carrito" style="width: 30px; height: 30px;">
+                </a>
+                <a class="nav-link" href="{% url 'perfilusuario' %}">
+                    <img src="{% static 'aplicacion/img/usu.png' %}" alt="Perfil" style="width: 30px; height: 30px;">
+                </a>
             </div>
         </div>
     </nav>
-
     <header class="p-3 bg-dark text-white">
         <div id="locationData"></div>
     </header>
