--- a/aplicacion/templates/aplicacion/adPedidos.html
+++ b/aplicacion/templates/aplicacion/adPedidos.html
@@ -46,7 +46,7 @@
                                         <th># Pedido</th>
                                         <th>Usuario</th>
                                         <th>Productos</th>
-                                        <th>Dirección</th>
+                                        <th>DirecciÃ³n</th>
                                         <th>Estado</th>
                                         <th>Acciones</th>
                                     </tr>
@@ -55,7 +55,7 @@
                                     {% for pedido in pedidos %}
                                         <tr id="pedido{{ pedido.id }}">
                                             <td>{{ pedido.id }}</td>
-                                            <td>{{ pedido.usuario.username }}</td>
+                                            <td>{{ pedido.nombre_usuario }}</td>
                                             <td>
                                                 {% for detalle in pedido.detalles.all %}
                                                     {{ detalle.producto.nombre }} ({{ detalle.cantidad }})<br>
