--- a/aplicacion/templates/aplicacion/agregar_usuario.html
+++ b/aplicacion/templates/aplicacion/agregar_usuario.html
@@ -29,6 +29,7 @@
                 </div>
             </div>                  
             <button type="submit" class="btn btn-primary">Agregar Usuario</button>
+            <a href="{% url 'adUsuarios' %}" class="btn btn-danger">Cancelar</a>
         </form>
     </div>
 
