--- a/aplicacion/templates/aplicacion/detalleCompra.html
+++ b/aplicacion/templates/aplicacion/detalleCompra.html
@@ -8,9 +8,50 @@
     <title>Detalle de Compra</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'aplicacion/css/detalleCompra.css' %}">
+    <style>
+    </style>
 </head>
 <body>
+    {% csrf_token %}
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto">
+                    {% if perms.aplicacion.add_permission %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'admin1' %}" style="color: white;">Administrador</a>
+                    </li>
+                    {% endif %}
+                </ul>
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'mispedidos' %}">Mis Pedidos</a>
+                    </li>
+                    {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'salir' %}">Cerrar Sesión</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link text-bg-primary" href="{% url 'login' %}">Iniciar Sesión</a>
+                    </li>
+                    {% endif %}
+                </ul>
+                <a class="nav-link" href="{% url 'detalleCompra' %}">
+                    <img src="{% static 'aplicacion/img/carritoo.png' %}" alt="Carrito" style="width: 30px; height: 30px;">
+                </a>
+                <a class="nav-link" href="{% url 'perfilusuario' %}">
+                    <img src="{% static 'aplicacion/img/usu.png' %}" alt="Perfil" style="width: 30px; height: 30px;">
+                </a>
+            </div>
+        </div>
+    </nav>
     <div class="container mt-5">
         <h1>Detalle de Compra</h1>
         {% csrf_token %}
@@ -64,5 +105,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
     <script src="{% static 'aplicacion/js/jquery-3.7.1.min.js' %}"></script>
     <script src="{% static 'aplicacion/js/detalleCompra.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
