--- a/aplicacion/templates/aplicacion/editar_usuario.html
+++ b/aplicacion/templates/aplicacion/editar_usuario.html
@@ -22,6 +22,7 @@
                 <input type="email" class="form-control" id="editEmail" name="email" value="{{ usuario.email }}" required>
             </div>
             <button type="submit" class="btn btn-primary">Guardar Cambios</button>
+            <a href="{% url 'adUsuarios' %}" class="btn btn-danger">Cancelar</a>
         </form>
     </div>
 </body>
