--- a/aplicacion/templates/aplicacion/perfilusuario.html
+++ b/aplicacion/templates/aplicacion/perfilusuario.html
@@ -17,16 +17,18 @@
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link active" href="{% url 'TiendaOnline' %}">Tienda Online</a>
+                        <li><a class="nav-link active" href="{% url 'mispedidos' %}">Mis Pedidos</a></li>
+                    {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'salir' %}">Cerrar Sesión</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link text-bg-primary" href="{% url 'login' %}">Iniciar Sesión</a>
+                    </li>
+                    {% endif %}
                     </li>
                 </ul>
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src="{% static 'aplicacion/img/usu.png' %}" alt="Perfil" style="width: 30px; height: 30px;">
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="{% url 'mispedidos' %}">Mis Pedidos</a></li>
-                            <li><a class="dropdown-item" href="{% url 'inicio' %}">Cerrar Sesión</a></li>
                         </ul>
                     </li>
                 </ul>
